--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
+html,
+body,
+#root {
+  margin: 0;
+  height: 100%;
+  object-fit: cover;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100%;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.chatSection {
+  background: #352C46 0% 0% no-repeat padding-box;
+  opacity: 1;
+  width: 100vw;
+  height: 100%;
+  object-fit: contain;
+  border-right: 3px solid rgb(138, 41, 138);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.imgDiv {
+  background: url("../src/images/maarten-hof-tales-from-the-loop.png") center center no-repeat padding-box;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
